# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-01c7368139ad64a69dd0240b9d3904938db50c2036d543d8cfc8dd7b9256326d.json  query-0b606d83801451c5b8c5fe5430c39b621d0a40b05db410aba5a757fd5cedfaf7.json  query-2aef880ad374257daf8ff8784e672357c45839e401377ac038f22f249d26b952.json  query-2efc4babc516216ae86142d53ebe4f1636c77e10379a2e73910e42241eb22a66.json  query-3753b5136efaba0d3434aef60d3b234ad3142a9d18c92135e834de18c9342685.json  query-4a1c526df578752272a05ab0ced36ca13d96ac8aae0c2f60038e181831312065.json  query-5244a84624be2ebc3bcaabf9b1a45ba401d11882aded12eeb42cff8d6de18784.json  query-92d1430cbd64c1424560b061cb2cb395369617b1e72bc6e86e7f1cd987748491.json  query-aa1048e917e7918b479b36c5b9c3947146c499a1d4d7a85c7c1bcdddce57e219.json  query-b4cf23356e2718cd61506d33d38b3845478c493a595d5f329882b5261f72cc34.json  query-dae941e0f9b08fa2284ce4bc1adbed72e8b9a61a28fdae8bc9b6bda6cc28ae67.json  query-e3cb7d2d11d43eb8efba315bc96c22770aebe04eb2ed6eccc80dfb90724a8ca8.json  query-eae27786a7c81ee2199fe3d5c10ac52c8067c61d6992f8f5045b908eb73bab8b.json  query-f662f52204ac729545aafa231ee19008d7ca139a923e5f7a1e6fece3a4fa8884.json
configuration/: base.yaml  production.yaml
migrations/: 20240804015334_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
