[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "Maria J. Solano <majosolano99@gmail.com>" ]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.9", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-lab = "0.21"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
# TODO: Update config to fix the audit error.
config = "0.14.0"
htmlescape = "0.3"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = "0.18"

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
linkify = "0.10"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.6"
